--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "@upstash/redis": "^1.28.0"
     },
     "engines": {
         "node": ">=14.0.0"
